Apply dredd to verify specification swagger
